[package]
name = "vdvault"
version = "0.1.0"
authors = ["jakobneufeld <jakob.n.neufeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strsim = "0.10.0"
regex = "1.4.1"
ansi_term = "0.12.1"
rustyline = "6.3.0"
